--- a/src/styles/HomeScreen.css
+++ b/src/styles/HomeScreen.css
@@ -1,18 +1,20 @@
+/*https://stackoverflow.com/questions/19741145/bootstrap-navbar-fixed-top-covers-content*/
+.signed_in_content_wrapper {
+    padding-top: 65px;
+    text-align: center;
+}
+
 .optionsWrapper {
     width: 100%;
     height: 50%;
-
-
 }
 
 .optionsText {
     text-align: center;
-
 }
 
 .homescreen-welcome {
     display: flex;
     align-items: center;
     flex-direction: column;
-
 }
