--- a/src/styles/SearchScreen.css
+++ b/src/styles/SearchScreen.css
@@ -11,8 +11,10 @@
     justify-content: center;
 }
 
+/*https://stackoverflow.com/questions/19741145/bootstrap-navbar-fixed-top-covers-content*/
 .userSearchWrapper {
     display: flex;
     flex-direction: column;
     background-color: #1DB954;
+    padding-top: 65px;
 }
